--- a/bcm2079x_i2c_mod/Makefile
+++ b/bcm2079x_i2c_mod/Makefile
@@ -1,6 +1,6 @@
 #KERNEL_BUILD_DIR=/lib/modules/$(shell uname -r)/build
 #KERNEL_BUILD_DIR=/sdcard/tpt10/linux-sunxi/
-KERNEL_BUILD_DIR=/sdcard/tpt10/linux-4.10.10/
+#KERNEL_BUILD_DIR=/sdcard/tpt10/linux-4.10.10/
 
 # acpi-tpt10-battery-m += tpt10-bat.o acpi-tpt10-battery.o
 
